# hbcd_motion_postproc

./: Dockerfile  README.md  README.rst  conf.py  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  index.rst  inputs_formatting.rst  installation.rst  introduction.rst  notes_on_data_release.rst  outputs.rst  survey.rst  testing.rst  usage.rst
docs/source/_static/: custom.css
docs/source/_static/_templates/: layout.html
hbcd_motion_postproc/: base.py  my_parser.py  run.py  utils.py
